--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.ico" />
     <title>FitFly - Workout Game</title>
     <meta name="description" content="Get fit while playing! Control Flappy Bird with your body movements using AI pose detection." />
     <meta name="author" content="FitFly" />
